correcting faculty bio page header, adding example pages for ecosystem hero variants

--- a/src/components/pages/faculty-bio.config.json
+++ b/src/components/pages/faculty-bio.config.json
@@ -1,6 +1,102 @@
 {
-  "preview": "@page-preview",
   "context": {
+    "site_header": {
+      "parent_unit_name": "Parent Unit Name Lorem Ipsum",
+      "website_title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
+      "search_visible": true,
+      "utility_button": {
+        "title": "Button",
+        "url": "https://www.iastate.edu/"
+      },
+      "utility_nav": [
+        {
+          "title": "My Admissions Account",
+          "url": "https://www.iastate.edu/"
+        }
+      ],
+      "full_nav": [
+        {
+          "title": "Link One",
+          "url": "https://www.iastate.edu/",
+          "children": [
+            {
+              "title": "Principles of Community",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        },
+        {
+          "title": "Link Two",
+          "url": "https://www.iastate.edu/",
+          "children": [
+            {
+              "title": "Principles of Community",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        },
+        {
+          "title": "Link Two That Is Long",
+          "url": "https://www.iastate.edu/",
+          "children": [
+            {
+              "title": "Principles of Community",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        },
+        {
+          "title": "Link Three That Is Really Long",
+          "url": "https://www.iastate.edu/",
+          "children": [
+            {
+              "title": "Principles of Community",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        },
+        {
+          "title": "Link Two That Is Really Long",
+          "url": "https://www.iastate.edu/",
+          "children": [
+            {
+              "title": "Principles of Community",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        },
+        {
+          "title": "Link Two That Is Really Long",
+          "url": "https://www.iastate.edu/",
+          "children": [
+            {
+              "title": "Principles of Community",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        },
+        {
+          "title": "Link Two That Is Really Long",
+          "url": "https://www.iastate.edu/",
+          "children": [
+            {
+              "title": "Principles of Community",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        },
+        {
+          "title": "Link Two That Is Really Long",
+          "url": "https://www.iastate.edu/",
+          "children": [
+            {
+              "title": "Principles of Community",
+              "url": "https://www.iastate.edu/"
+            }
+          ]
+        }
+      ]
+    },
     "faculty_bio_info_card": {
       "image": "../../img/faculty-bio-photo_fpo.jpg",
       "name": "FirstName LastName",
