--- a/src/components/pages/faculty-bio.config.json
+++ b/src/components/pages/faculty-bio.config.json
@@ -63,6 +63,40 @@
         "<h2>Education</h2><p>PhD, Industrial and Operations Engineering, The University of Michigan</p><p>MSE, Industrial and Operations Engineering, The University of Michigan</p><p>BS (with high distinction), Systems Engineering, The University of Virginia</p>",
         "<h2>Affiliations</h2><div class=\"link-set\"><ul><li><a href=\"https://iastate.edu\" class=\"link-set__link iastate22-link-secondary\">DataFEWSion Graduate Traineeship<span class=\"arrow\"></span></a></li><li><a href=\"https://iastate.edu\" class=\"link-set__link iastate22-link-secondary\">The Engineering Economist<span class=\"arrow\"></span></a></li></ul></div>"
       ]
+    },
+    "social_links": {
+      "instagram": "",
+      "youtube": "",
+      "facebook": "",
+      "twitter": "#",
+      "linkedin": "",
+      "flickr": ""
+    },
+    "footer_nav": [],
+    "footer_secondary_nav": [
+      {
+        "title": "Sign Ons and Tools",
+        "url": "#"
+      }
+    ],
+    "site_org_contact": {
+      "name": "Sarah Ryan",
+      "email": [
+        {
+          "email_address": "sryan@iastate.edu"
+        }
+      ],
+      "phone": [
+        {
+          "label": "",
+          "phone_number": "(515) 294-3112"
+        }
+      ],
+      "address": {
+        "building": "5205 Adv Tch Res Bid (ATRB)",
+        "street": "2213 Pammel Dr",
+        "city_state_zip": "Ames, IA 50011-1101"
+      }
     }
   }
 }
