https://bugify.idfive.com/issues/27696

--- a/src/components/faculty-bio-info-card/faculty-bio-info-card.config.json
+++ b/src/components/faculty-bio-info-card/faculty-bio-info-card.config.json
@@ -39,7 +39,9 @@
         "instagram": "#",
         "youtube": "#",
         "facebook": "#",
-        "twitter": "#"
+        "twitter": "#",
+        "linkedin": "#",
+        "flickr": "#"
       }
     }
   }
