--- a/src/components/pages/faculty-bio.config.json
+++ b/src/components/pages/faculty-bio.config.json
@@ -98,5 +98,13 @@
         "city_state_zip": "Ames, IA 50011-1101"
       }
     }
-  }
+  },
+  "variants": [
+    {
+      "name": "no-image",
+      "context": {
+        "image": ""
+      }
+    }
+  ]
 }
